# friend-backend

./: .env  db.sqlite3  pyproject.toml
category/: admin.py  models.py  serializers.py  urls.py  views.py
category/migrations/: 0001_initial.py  0002_alter_category_options_remove_category_name.py
chats/: admin.py  models.py  serializers.py  urls.py  views.py
chats/migrations/: 0001_initial.py  0002_initial.py  0003_chatroom_chat.py  0004_chatroom_name.py  0005_remove_chatroom_user_chatroom_user.py  0006_remove_chatroom_chat_chat_chat_room_and_more.py  0007_chatroom_owner.py  0008_rename_user_chatroom_users.py  0009_alter_chatroom_users.py  0010_alter_chatroom_users.py
common/: models.py
config/: authentication.py  settings.py  urls.py
friend/: admin.py  models.py  views.py
friend/migrations/: 0001_initial.py  0002_initial.py
items/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_initial.py  0003_tag_item_category_item_tags.py  0004_remove_tag_name.py  0005_remove_item_comment_alter_tag_tags.py  0006_remove_item_photo.py  0007_alter_item_tags.py  0008_alter_item_tags.py  0009_alter_item_file_delete_rating.py  0010_alter_item_tags.py  (+7 more)
medias/: admin.py  models.py  serializers.py  views.py
reviews/: admin.py  models.py  serializers.py
thanks/: admin.py  models.py  serializers.py  urls.py  views.py
todos/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+26 files in other folders)
